--- a/responsive.css
+++ b/responsive.css
@@ -7,10 +7,9 @@
     font-size: 2em;
   }
   
-  h2 {
+  h2,h3 {
     font-size: 1.5em;
   }
-  
   
   nav a {
     font-size: 1.25em;
@@ -20,23 +19,32 @@
     font-size: 12px 
   }
   
-  .two_row {
+  .two_collumn {
     width: 90%; 
   }
   
+  
+  
+  
 }
 
+@media screen and (max-width: 620px) {
+  .left_side, .right_side {
+    width: 100%;
+  }
+  
 @media screen and (max-width: 360px) {
   
   h1 {
-    font-size: 1.5em;
+    font-size: 1.75em;
   }
   
-  h2 {
-    font-size: 1.25em;
+  h2, h3 {
+    font-size: 1.4em;
   }
-  
   
   nav a {
-    font-size: 1em;
+    font-size: 1.1em;
   }
+  
+  
